force-app/main/default/objects/WorkOrderLineItem/fields/Ordre_d_ex_cution__c.field-meta.xml
<CustomField>
    <fullName>Ordre_d_ex_cution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordre d&apos;exécution</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Éléments d&apos;ordre d&apos;exécution</relationshipLabel>
    <relationshipName>l_ments_d_ordre_d_ex_cution</relationshipName>
    <type>Lookup</type>
</CustomField>