force-app/main/default/objects/WorkOrderLineItem/fields/PRESTA_TECH_Quantite__c.field-meta.xml
<CustomField>
    <fullName>PRESTA_TECH_Quantite__c</fullName>
    <formula>TEXT(Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRESTA_TECH_Quantite</label>
    <type>Text</type>
</CustomField>