force-app/main/default/objects/WorkOrderLineItem/fields/WOLI_CatalogueDePrix__c.field-meta.xml
<CustomField>
    <fullName>WOLI_CatalogueDePrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogue de prix</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Prestations à réaliser</relationshipLabel>
    <relationshipName>PrestationsARealiser</relationshipName>
    <type>Lookup</type>
</CustomField>