force-app/main/default/objects/WorkOrderLineItem/validationRules/RV_QuantitePrestationNombreEntierPresta.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_QuantitePrestationNombreEntierPresta</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(PRESTA_TECH_Quantite__c,&quot;[0-9]{1}&quot;))</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>La quantité doit être un chiffre ou un nombre entier.</errorMessage>
</ValidationRule>